# chrismas-unicorn

./: .env.example  .gitignore  create_tables.py  requirements.txt
.kiro/specs/fastapi-backend-init/: design.md  requirements.md  tasks.md
.kiro/specs/sepay-webhook/: design.md  requirements.md  tasks.md
app/: config.py  database.py  main.py  supabase_client.py
app/dependencies/: auth.py
app/middleware/: error_handler.py
app/models/: base.py  transaction.py
app/public/: admin.html  tree1.html  tree2.html  tree3.html  tree4.html  tree5.html
app/routers/: health.py  transactions.py  webhook.py
app/schemas/: base.py  health.py  transaction.py  webhook.py
app/services/: transaction_service.py
app/validators/: __init__.py  generate_validator.py
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  supabase_setup.sql
backend/scripts/: start.bat  start.sh  start_server.py
backend/src/main_app/: main.py
backend/src/main_app/api/v1/endpoints/: user_sessions.py
backend/src/main_app/core/: config.py  database.py
backend/src/main_app/models/: user_session.py
backend/src/main_app/public/: tree1.html  tree2.html  tree3.html  tree4.html  tree5.html
backend/src/main_app/services/: user_session_service.py
tests/: conftest.py  test_health.py
